# music_elf

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/: README.md
agents/skills/music-elf-core-pipeline/: SKILL.md
agents/skills/music-elf-core-pipeline/agents/: openai.yaml
agents/skills/music-elf-localization/: SKILL.md
agents/skills/music-elf-localization/agents/: openai.yaml
agents/skills/music-elf-market-science/: SKILL.md
agents/skills/music-elf-market-science/agents/: openai.yaml
agents/skills/music-elf-model-integration/: SKILL.md
agents/skills/music-elf-model-integration/agents/: openai.yaml
agents/skills/music-elf-parameter-data/: SKILL.md
agents/skills/music-elf-parameter-data/agents/: openai.yaml
agents/skills/music-elf-spatial-numerics/: SKILL.md
agents/skills/music-elf-spatial-numerics/agents/: openai.yaml
agents/skills/music-elf-ui-app/: SKILL.md
agents/skills/music-elf-ui-app/agents/: openai.yaml
agents/subagents/: core-dsp.md  export-notation-qa.md  flutter-ui.md  localization.md  market-science.md  model-adapter.md  music-theory-arrangement.md  parameter-db.md  spatial-numeric-analysis.md  ui-event-state.md
agents/subagents/openai/: core-dsp.yaml  export-notation-qa.yaml  flutter-ui.yaml  localization.yaml  market-science.yaml  model-adapter.yaml  music-theory-arrangement.yaml  parameter-db.yaml  spatial-numeric-analysis.yaml  ui-event-state.yaml
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  c_api_output.mid  cmake_install.cmake  music_elf_core.lib
build_ninja/Testing/Temporary/: CTestCostData.txt
build_ninja/acapella_outputs/: SUMMARY.md
build_ninja/acapella_outputs/cli/: twinkle.mid  twinkle.musicxml  twinkle_benchmark.txt  twinkle_inspect.txt
build_ninja/acapella_outputs/happy_birthday/: analysis.txt  output.mid  output.musicxml
build_ninja/acapella_outputs/happy_birthday_thomas_48k/: analysis.txt  output.mid  output.musicxml
build_ninja/acapella_outputs/lightly_row/: analysis.txt  output.mid  output.musicxml
build_ninja/acapella_outputs/london_bridge/: analysis.txt  output.mid  output.musicxml
build_ninja/acapella_outputs/mary_lamb/: analysis.txt  output.mid  output.musicxml
build_ninja/acapella_outputs/twinkle_fast/: analysis.txt  output.mid  output.musicxml
build_ninja/acapella_outputs/twinkle_slow/: analysis.txt  output.mid  output.musicxml
docs/: algorithm_flow_status.md  model_integration_schemas.md  pre_ui_model_roadmap.md  project_structure.md  錄音唱歌辨識與自動和弦交響樂可行性分析.md
docs/conductor-studio/: README.md  conductor.css  conductor.jsx  index.html
include/music_elf/: accompaniment_generator.hpp  audio_io.hpp  audio_renderer.hpp  c_api.h  core_pipeline.hpp  dynamics_analyzer.hpp  harmony_analyzer.hpp  lyric_aligner.hpp  midi_catalog.hpp  midi_writer.hpp  model_interfaces.hpp  musicxml_writer.hpp  note_segmenter.hpp  pitch_detector.hpp  rhythm_analyzer.hpp
scripts/: dev-server.mjs
src/: accompaniment_generator.cpp  audio_io.cpp  audio_renderer.cpp  c_api.cpp  core_pipeline.cpp  dynamics_analyzer.cpp  harmony_analyzer.cpp  lyric_aligner.cpp  midi_catalog.cpp  midi_writer.cpp  model_interfaces.cpp  musicxml_writer.cpp  note_segmenter.cpp  pitch_detector.cpp  rhythm_analyzer.cpp
tests/: acapella_cli_tests.cpp  acapella_real_audio_tests.cpp  arrangement_midi_tests.cpp  audio_io_tests.cpp  audio_renderer_tests.cpp  c_api_tests.cpp  cli_end_to_end_tests.cpp  export_snapshot_tests.cpp  harmony_tests.cpp  lyrics_musicxml_tests.cpp  midi_catalog_tests.cpp  model_interfaces_tests.cpp  note_segmenter_tests.cpp  pipeline_integration_tests.cpp  pitch_detector_tests.cpp  rhythm_dynamics_tests.cpp
tools/: music_elf_cli.cpp
